package Projects.ZomatoClone.strategies;

public interface INotificationSender {
    void sendNotification(String userName, String message);
}
