package Projects.ZomatoClone.strategies;

public interface IPaymentStrategy {
    void pay(int orderId,double amount);
}
