package Projects.ZomatoClone.enums;

public enum OrderStatus {
    PENDING,
    PROCESSING,
    ACCEPTED,
    PREPARING,
    PREPARED,
    READY_FOR_PICKUP,
    ASSIGNED_TO_DELIVERY,
    PICKED_UP,
    DELIVERED,
}
